# routes/calling.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const router = new express.Router();
-const memberController = require("../controllers/memberController");
+const callingController = require("../controllers/callingController");
 const validation = require('../utilities/validate');
 const passport = require("passport")
 const {isAuthenticated} = require("../middleware/authenticate");
@@ -9,12 +9,16 @@ const {isAuthenticated} = require("../middleware/authenticate");
 
 router.get('/', memberController.getAll);
 
+
 router.get('/:id', memberController.getSingle);
 
-router.post('/', validation.saveMember, isAuthenticated, memberController.createMember);
 
-router.put('/:id', validation.saveMember, isAuthenticated, memberController.updateMember);
+router.post('/', validation.saveCalling, isAuthenticated, memberController.createCalling);
 
-router.delete('/:id', isAuthenticated, memberController.deleteMember);
+
+router.put('/:id', validation.saveCalling, isAuthenticated, memberController.updateCalling);
+
+
+router.delete('/:id', isAuthenticated, memberController.deleteCalling);
 
 module.exports = router;
