# routes/index.js
@@ -1,7 +1,7 @@
 // Needed Resources 
 const express = require("express")
 const router = new express.Router()
-const swaggerDocument = require('../swagger.json');
+//const swaggerDocument = require('../swagger.json');
 const passport = require("passport");
 
 
@@ -13,8 +13,13 @@ router.use('/', require('./swagger'));
 router.use('/users', require('./users'));
 
 
-
 router.use('/members', require('./members'));
+
+
+router.use('/calling', require('./calling'));
+
+
+router.use('/organization', require('./organization'));
 
 
 
