# routes/users.js
@@ -11,10 +11,11 @@ router.get('/', userController.getAll);
 
 router.get('/:id', userController.getSingle);
 
-router.post('/', validation.saveUser, userController.createUser);
+router.post('/', validation.saveUser, isAuthenticated, userController.createUser);
 
-router.put('/:id', validation.saveUser, userController.updateUser);
+router.put('/:id', validation.saveUser, isAuthenticated, userController.updateUser);
 
-router.delete('/:id', userController.deleteUser);
+router.delete('/:id', isAuthenticated, userController.deleteUser);
 
 module.exports = router;
+
